--- a/src/app/av/catalogList/catalogList.html
+++ b/src/app/av/catalogList/catalogList.html
@@ -1,47 +1,32 @@
 <div class="ui-g">
-  <div class="ui-g-2">
-    <p-panel header="Качество">
-      <div class="ui-g" style="width:250px;margin-bottom:10px">
-        <div class="ui-g-12">
-          <p-radioButton name="group1" value="Option 1" label="Option 1" [(ngModel)]="val1"
-                         inputId="opt1"></p-radioButton>
-        </div>
-        <div class="ui-g-12">
-          <p-radioButton name="group1" value="Option 2" label="Option 2" [(ngModel)]="val1"
-                         inputId="opt2"></p-radioButton>
-        </div>
-        <div class="ui-g-12">
-          <p-radioButton name="group1" value="Option 3" label="Option 3" [(ngModel)]="val1"
-                         inputId="opt3"></p-radioButton>
-        </div>
-      </div>
-    </p-panel>
-    <p-panel header="Цена">
+  <div class="ui-g-2 ui-sm-4 ui-md-3 ui-lg-2 ui-xl-2">
+    <p-panel header="О проекте" [toggleable]="true" [style]="{'margin-bottom':'20px'}">
 
-      <div>{{val}}</div>
-      <p-slider [(ngModel)]="val" [min]="0" [max]="100" [range]="true"></p-slider>
+        Дорогие друзья. На этом ресурсе вы сможете следить за процессом разработки Интернет-магазина автозапчастей.<br>
+        Обсуждение разработки происходит в группе <a href="https://t.me/ocap_dev">Telegram.</a>
+
+
+      Для участия в проекте вы должны пройти модерацию в нашей группе телеграмм и внести первоначальный взнос за участие.
     </p-panel>
   </div>
-  <div class="ui-g-10">
-    <p-carousel headerText="Каталоги" [value]="catalogList">
+  <div class="ui-g-10 ui-sm-8 ui-md-9 ui-lg-10 ui-xl-10">
+    <catalogCarComponent></catalogCarComponent>
+
+    <p-dataGrid [value]="menuItemList" [rows]="20">
+      <p-header>
+        Каталоги
+      </p-header>
       <ng-template let-item pTemplate="item">
-        <div class="ui-grid ui-grid-responsive">
-          <div class="ui-grid-row">
-            <div class="ui-grid-col-12">
-              <img src="/assets/Audi.png" width="60">
-            </div>
-          </div>
-          <div class="ui-grid-row">
-            <div class="ui-grid-col-12">{{item.d}}</div>
-          </div>
-          <div class="ui-grid-row">
-            <div class="ui-grid-col-12">
-              <button type="button" pButton icon="fa-search"></button>
-            </div>
-          </div>
+        <div style="padding:3px" class="ui-sm-12 ui-md-6 ui-lg-3 ui-xl-3">
+          <p-panel  [style]="{'text-align':'center'}">
+            <img src="/assets/Audi.png" width="100%">
+            <div class="car-detail">{{item.label}}</div>
+            <hr class="ui-widget-content" style="border-top:0">
+            <a class="fa fa-search" href="{{item.url}}" style="cursor:pointer"></a>
+          </p-panel>
         </div>
       </ng-template>
-    </p-carousel>
+    </p-dataGrid>
   </div>
 </div>
 
